<resources>
    <string name="progress_bar_loading">Loading …</string>
    <string name="photo_details_headline">Details</string>
    <string name="photo_detail_label_filename">Filename:</string>
    <string name="photo_detail_label_resolution">Resolution:</string>
    <string name="photo_detail_label_kbsize">Size:</string>
    <string name="photo_detail_label_taken_date">Date taken:</string>
    <string name="photo_detail_label_camera_manufacturer">Camera:</string>
    <string name="search">Search</string>
    <string name="search_results_title">Search Results in $NAME</string>
    <string name="no_items">No items found</string>
    <string name="next_items">Download more items</string>
    <string name="menu_home">My Mozy</string>
    <string name="menu_help">Help</string>
    <string name="menu_download">Download</string>
    <string name="menu_hires">High res</string>
    <string name="menu_upload">Upload</string>
    <string name="error">Error</string>
    <string name="error_not_available">A network error occurred. Please check your connection settings and try again.</string>
    <string name="error_signin_too_many_times">For security reasons you must now wait 10 min before making another attempt to sign in.</string>
    <string name="change_pin_toast">Your new passcode has been saved. Use your passcode to sign in.</string>
    <string name="ok_button_text">OK</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="alert_dialog_retry">Retry</string>
    <string name="yes_button_text">Yes</string>
    <string name="no_button_text">No</string>
    <string name="email_text">Email address</string>
    <string name="password_text">Password</string>
    <string name="errormessage_password_text_empty">Please enter your password.</string>
    <string name="errormessage_email_text_empty">Please enter a valid email address.</string>
    <string name="errormessage_pins_donotmatch">Your passcode and confirm passcode entries do not match. Please enter them again.</string>
    <string name="errormessage_pins_pin_not_4digit">Your passcode must be a 4-digit number.</string>
    <string name="errormessage_pins_pin_empty">Please enter a passcode.</string>
    <string name="errormessage_invalid_pin">Invalid passcode. Select <b>Forgot Passcode</b> to change your passcode.</string>
    <string name="errormessage_passwords_contains_whitespaces">Your password cannot contain spaces. Please enter your password again</string>
    <string name="errormessage_email_not_valid">Please enter a valid email address.</string>
    <string name="login_page_heading_text">Enter your passcode:</string>
    <string name="banner_text_link_forgotpin"><u>Forgot passcode?</u></string>
    <string name="banner_text_forgotpassword"><u>Forgot your password?</u></string>
    <string name="form_field_currentpin_text">Current passcode:</string>
    <string name="form_field_newpin_text">New passcode:</string>
    <string name="form_field_confirm_newpin_text">Confirm new:</string>
    <string name="pin_error_title">Passcode Error</string>
    <string name="mozy_authentication_progress_dialog_text">Verifying…</string>
    <string name="feedback_subject">MozyMobile Feedback</string>
    <string name="feedback_email">mm-feedback@mozy.com</string>
    <string name="feedback_chooser_title">MozyMobile: Send us your feedback</string>
    <string name="signin_help_message">Sign in to Mozy</string>
    <string name="settings_no_voice_calls">If you are on a 2G network, you may miss voice calls when data is being transferred on the network.</string>
    <string name="warning">Warning</string>
    <string name="endoflist_reached">Moving to start of list…</string>
    <string name="startoflist_reached">Moving to end of list…</string>
    <string name="quota_used">($USED% of $QUOTAGB used)</string>
    <string name="last_backed_up">Last backed up</string>
    <string name="phone_file_newer">There is a newer version of this file on your device.\n\nDo you want to replace it with the older Mozy version?</string>
    <string name="cloud_file_newer">There is an older version of this file on your device.\n\nDo you want to replace it with the newer Mozy version?</string>
    <string name="delete_confirmation">Are you sure you want to delete $FILENAME?</string>
    <string name="progress_bar_downloading_files">Downloading to SD Card/Mozy</string>
    <string name="Decrypting_File">Decrypting …</string>
    <string name="settings_main_item_title_about">About</string>
    <string name="settings_main_item_subtitle_about">About Mozy for Android</string>
    <string name="settings_main_label_security">Security</string>
    <string name="settings_main_item_title_passcode">Passcode Lock</string>
    <string name="settings_main_item_title_passcode_change">Change passcode</string>
    <string name="settings_main_item_subtitle_passcode_change">Change your passcode</string>
    <string name="settings_main_item_title_personal_keys">Personal Keys</string>
    <string name="settings_main_item_subtitle_personal_keys">Manage personal key decryption</string>
    <string name="settings_main_item_title_logoff">Sign Out</string>
    <string name="settings_main_item_subtitle_logoff">Disconnect from your Mozy account</string>
    <string name="settings_main_label_upload">Uploads</string>
    <string name="settings_main_item_title_settings">Upload Settings</string>
    <string name="settings_main_item_subtitle_settings">Automatic Photo/Video Upload</string>
    <string name="settings_main_item_title_status">Upload Status</string>
    <string name="settings_main_item_subtitle_status">View File Upload Progress</string>
    <string name="settings_main_item_title_space">Storage Space Used</string>
    <string name="settings_main_item_subtitle_space">How much Mozy storage you have available</string>
    <string name="settings_main_item_subtitle_passcode">Lock Mozy access with a passcode</string>
    <string name="settings_upload_method">Upload Method</string>
    <string name="settings_upload_automatic_section">Automatic Upload</string>
    <string name="settings_option_auto_photos">Automatic Photo Upload</string>
    <string name="settings_option_auto_videos">Automatic Video Upload</string>
    <string name="settings_option_manual_upload_help">Manual Upload Help</string>
    <string name="settings_option_roaming">Never when Roaming</string>
    <string name="settings_option_wifi">Only On WiFi</string>
    <string name="settings_main_item_title_user">Mozy User</string>
    <string name="view_menu_label">View</string>
    <string name="open_menu_label">Open</string>
    <string name="file_options_title">File Options</string>
    <string name="settings_option_auto_photo_summary">Upload photos as I take them</string>
    <string name="settings_option_auto_video_summary">Upload videos as I take them</string>
    <string name="settings_option_roaming_summary">Avoid unexpected data charges</string>
    <string name="settings_option_wifi_summary">Recommended if you upload videos</string>
    <string name="settings_option_manual_upload_help_summary">Instructions for manual upload</string>
    <string name="settings_manual_upload_help">To manually upload photos or videos, share them to Mozy from the gallery application.</string>
    <string name="about_screen_publisher_label">Publisher</string>
    <string name="about_screen_version_label">Version</string>
    <string name="about_screen_copyright_label">Copyright</string>
    <string name="about_screen_copyright_value">\u00A9 2011 - 2014 Mozy, Inc. All rights reserved.</string>
    <string name="upload_status_screen_number_label">Files Pending</string>
    <string name="upload_status_screen_time_label">Estimated Time to Complete</string>
    <string name="upload_status_screen_files">files,</string>
    <string name="upload_status_screen_file">file,</string>
    <string name="settings_main_logoff_prompt_title">Are you sure that you want to sign out from Mozy?</string>
    <string name="c_and_r_initial_prompt">You can automatically upload your photos and videos to Mozy. Uploading happens in the background, so that you can continue to work. Would you like to enable this feature?</string>
    <string name="settings_storage_increase_quota">Increase storage here</string>
    <string name="settings_storage_quota_nocloud">Your account is not set up for upload.</string>
    <string name="settings_storage_quota_progress">You have $PERCENTAGE% of $GIGABYTESGB free.</string>
    <string name="errormessage_authorization_failure">Authorization failure</string>
    <string name="errormessage_authorization_failure_signin">Check your username and password and try again</string>
    <string name="menu_refresh">Refresh</string>
    <string name="photos_only">Gallery view</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_delete">Delete</string>
    <string name="not_logged_in_for_share">You must sign into Mozy Mobile to share to Mozy</string>
    <string name="login">Sign In</string>
    <string name="roaming_download_warning">You are on a roaming network. Do you want to download this file?</string>
    <string name="download_prompt">Do you want to download this file?</string>
    <string name="upload_dialog_size">(total $FILESIZE)</string>
    <string name="upload_notification_title">Mozy Uploads</string>
    <string name="upload_done_notification_body">$NUMFILES file(s) $TOTALSIZE uploaded</string>
    <string name="year">year</string>
    <string name="years">years</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="week">week</string>
    <string name="weeks">weeks</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="second">second</string>
    <string name="seconds">seconds</string>
    <string name="ago">ago</string>
    <string name="progress_bar_searching">Searching …</string>
    <string name="search_no_results_prompt_title">No match</string>
    <string name="search_no_results_prompt_text">No matching file was found for search \'$SEARCH\'.</string>
    <string name="no_photos">No photos to display</string>
    <string name="file_list_detail">$SIZE, modified $DATE</string>
    <string-array name="file_sizes_array">
        <item>bytes</item>
        <item>KB</item>
        <item>MB</item>
        <item>GB</item>
        <item>TB</item>
        <item>PB</item>
    </string-array>
    <string name="first_run_paragraph1">Access your files from anywhere at any time with the Mozy Android app.</string>
    <string name="first_run_paragraph2">Not a Mozy user?</string>
    <string name="first_run_paragraph3">Sign up today at Mozy.com</string>
    <string name="encrypted_device_first_time_prompt_message">"You have protected your files with personal key encryption. To view these files, would you like to enter your personal key?"</string>
    <string name="encrypted_device_first_time_warn_message">You can not view or share files from this backup without entering your personal key.</string>
    <string name="personal_key_settings">Personal Key Settings</string>
    <string name="private_key_settings_container_subtitle">Enter or edit personal key</string>
    <string name="private_key_settings_dialog_message">Personal Key</string>
    <string name="private_key_settings_dialog_checkbox_title">Show Personal Key</string>
    <string name="private_key_save_confirmation">Your personal key was successfully saved.</string>
    <string name="alternate_signin_title">Use Alternate Sign In</string>
    <string name="upload_choose_button_text">Choose</string>
    <string name="upload_dialog_choose_folder">Choose folder to upload to:</string>
</resources>