<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >
    
    <ImageView
        android:id="@+id/mozyLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dip"
        android:adjustViewBounds="true"
        android:paddingLeft="80dip"
        android:paddingRight="80dip"
        android:src="@drawable/mozylogo_firsttime_signin" />

    <TextView
        android:id="@+id/uploadTitleTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mozyLogo"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/upload_dialog_choose_folder"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/relativeLayoutFolderButtton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/uploadTitleTextView"
        android:background="@android:drawable/btn_default"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/currentUploadFolderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/upload_sync_path" />

        <ImageView
            android:id="@+id/FolderImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:src="@drawable/create_folder_plus" />

    </RelativeLayout>
    
        <TextView
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_items"
            android:textAppearance="@style/LargeGreyTextAppearance"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/relativeLayoutFolderButtton"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearlayout_generic_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:orientation="vertical"
                android:scrollbars="vertical" >

                <ListView
                    android:id="@+id/generic_list"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:cacheColorHint="@color/main_background_color"
                    android:divider="@android:drawable/divider_horizontal_bright"
                    android:dividerHeight="1dip"
                    android:fastScrollEnabled="true"
                    android:listSelector="@drawable/selection_list" >
                </ListView>

                <TextView
                    android:id="@+id/footer_divider"
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@android:drawable/divider_horizontal_bright"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout_cancel_upload"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:background="@color/transparent_color"
                android:gravity="center_vertical|center_horizontal"
                android:minHeight="40dip"
                android:orientation="horizontal"
                android:paddingLeft="50dip"
                android:paddingRight="50dip" >

                <Button
                    android:id="@+id/negative_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="center_vertical|center_horizontal"
                    android:minWidth="80dip"
                    android:text="@string/cancel_button_text" />

                <Button
                    android:id="@+id/choose_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="50dip"
                    android:minWidth="80dip"
                    android:text="@string/upload_choose_button_text" />
            </LinearLayout>
        </LinearLayout>
   
</RelativeLayout>
</FrameLayout>
